certs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-ingress-www
  namespace: istio-system
  annotations:
    auth.istio.io/8089: NONE
spec:
  ports:
    - port: 8089
      name: http-cert
  selector:
    acme.cert-manager.io/http01-solver: "true"
    certmanager.k8s.io/domain: rwx.systems
