certs/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-http
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - public-http
  http:
    - route:
        - destination:
            host: http-public
            port:
              number: 3000
